# multilevel_cmake_protobuf_example

./: CMakeLists.txt
msg/: CMakeLists.txt  axis.proto
src/: CMakeLists.txt  test.cc
